@@ -21,12 +21,10 @@ package org.apache.myfaces.view.facelets.impl;
 import java.io.IOException;
 import java.net.URL;
 import java.util.ArrayList;
-import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Iterator;
 import java.util.LinkedList;
 import java.util.List;
-import java.util.Map;
 import java.util.Set;
 
 import javax.el.ELContext;
@@ -45,22 +43,26 @@ import javax.faces.view.facelets.FaceletException;
 
 import org.apache.myfaces.view.facelets.AbstractFacelet;
 import org.apache.myfaces.view.facelets.AbstractFaceletContext;
+import org.apache.myfaces.view.facelets.ELExpressionCacheMode;
 import org.apache.myfaces.view.facelets.FaceletCompositionContext;
+import org.apache.myfaces.view.facelets.PageContext;
 import org.apache.myfaces.view.facelets.TemplateClient;
 import org.apache.myfaces.view.facelets.TemplateContext;
 import org.apache.myfaces.view.facelets.TemplateManager;
 import org.apache.myfaces.view.facelets.el.DefaultVariableMapper;
+import org.apache.myfaces.view.facelets.el.VariableMapperBase;
 import org.apache.myfaces.view.facelets.tag.jsf.core.AjaxHandler;
 
 /**
  * Default FaceletContext implementation.
  * 
  * A single FaceletContext is used for all Facelets involved in an invocation of
- * {@link org.apache.myfaces.view.facelets.Facelet#apply(FacesContext, UIComponent) Facelet#apply(FacesContext, UIComponent)}. This
+ * {@link org.apache.myfaces.view.facelets.Facelet#apply(FacesContext, UIComponent)
+ * Facelet#apply(FacesContext, UIComponent)}. This
  * means that included Facelets are treated the same as the JSP include directive.
  * 
  * @author Jacob Hookom
- * @version $Id: DefaultFaceletContext.java,v 1.4.4.3 2006/03/25 01:01:53 jhook Exp $
+ * @version $Id$
  */
 final class DefaultFaceletContext extends AbstractFaceletContext
 {
@@ -72,14 +74,16 @@ final class DefaultFaceletContext extends AbstractFaceletContext
     private final List<AbstractFacelet> _faceletHierarchy;
 
     private VariableMapper _varMapper;
+    private final DefaultVariableMapper _defaultVarMapper;
+    private VariableMapperBase _varMapperBase;
 
     private FunctionMapper _fnMapper;
 
-    private final Map<String, Integer> _ids;
-    private final Map<Integer, Integer> _prefixes;
+    //private final Map<String, Integer> _ids;
+    //private final Map<Integer, Integer> _prefixes;
     private String _prefix;
 
-    private final StringBuilder _uniqueIdBuilder = new StringBuilder(30);
+    private StringBuilder _uniqueIdBuilder;
 
     //private final LinkedList<TemplateManager> _clients;
     
@@ -90,17 +94,25 @@ final class DefaultFaceletContext extends AbstractFaceletContext
     private final List<TemplateContext> _isolatedTemplateContext;
     
     private int _currentTemplateContext;
+    
+    private ELExpressionCacheMode _elExpressionCacheMode;
+    
+    private boolean _isCacheELExpressions;
 
+    private final List<PageContext> _isolatedPageContext;
+    
     public DefaultFaceletContext(DefaultFaceletContext ctx,
             AbstractFacelet facelet, boolean ccWrap)
     {
         _ctx = ctx._ctx;
-        _ids = ctx._ids;
-        _prefixes = ctx._prefixes;
+        //_ids = ctx._ids;
+        //_prefixes = ctx._prefixes;
         //_clients = ctx._clients;
         _faces = ctx._faces;
         _fnMapper = ctx._fnMapper;
         _varMapper = ctx._varMapper;
+        _defaultVarMapper = ctx._defaultVarMapper;
+        _varMapperBase = ctx._varMapperBase;
         _faceletHierarchy = new ArrayList<AbstractFacelet>(ctx._faceletHierarchy
                 .size() + 1);
         _faceletHierarchy.addAll(ctx._faceletHierarchy);
@@ -133,6 +145,11 @@ final class DefaultFaceletContext extends AbstractFaceletContext
         //}
         _isolatedTemplateContext = ctx._isolatedTemplateContext;
         _currentTemplateContext = ctx._currentTemplateContext;
+        
+        _isolatedPageContext = ctx._isolatedPageContext;
+        
+        _elExpressionCacheMode = ctx._elExpressionCacheMode;
+        _isCacheELExpressions = ctx._isCacheELExpressions;
 
         //Update FACELET_CONTEXT_KEY on FacesContext attribute map, to 
         //reflect the current facelet context instance
@@ -143,16 +160,25 @@ final class DefaultFaceletContext extends AbstractFaceletContext
     public DefaultFaceletContext(FacesContext faces, AbstractFacelet facelet, FaceletCompositionContext mctx)
     {
         _ctx = faces.getELContext();
-        _ids = new HashMap<String, Integer>();
-        _prefixes = new HashMap<Integer, Integer>();
+        //_ids = new HashMap<String, Integer>();
+        //_prefixes = new HashMap<Integer, Integer>();
         //_clients = new LinkedList<TemplateManager>();
         _faces = faces;
         _fnMapper = _ctx.getFunctionMapper();
         _varMapper = _ctx.getVariableMapper();
         if (_varMapper == null)
         {
-            _varMapper = new DefaultVariableMapper();
-        }        
+            _defaultVarMapper = new DefaultVariableMapper();
+            _varMapper = _defaultVarMapper;
+            _varMapperBase = _defaultVarMapper;
+        }
+        else
+        {
+            _defaultVarMapper = new DefaultVariableMapper(_varMapper);
+            _varMapper = _defaultVarMapper;
+            _varMapperBase = _defaultVarMapper;
+        }
+        
         _faceletHierarchy = new ArrayList<AbstractFacelet>(1);
         _faceletHierarchy.add(facelet);
         _facelet = facelet;
@@ -161,10 +187,12 @@ final class DefaultFaceletContext extends AbstractFaceletContext
         _isolatedTemplateContext = new ArrayList<TemplateContext>(1);
         _isolatedTemplateContext.add(new TemplateContextImpl());
         _currentTemplateContext = 0;
-
-        //Set FACELET_CONTEXT_KEY on FacesContext attribute map, to 
-        //reflect the current facelet context instance
-        faces.getAttributes().put(FaceletContext.FACELET_CONTEXT_KEY, this);
+        _defaultVarMapper.setTemplateContext(_isolatedTemplateContext.get(_currentTemplateContext));
+        
+        _isolatedPageContext = new ArrayList<PageContext>(8);
+        
+        _elExpressionCacheMode = mctx.getELExpressionCacheMode();
+        _isCacheELExpressions = !ELExpressionCacheMode.noCache.equals(_elExpressionCacheMode);
     }
 
     /**
@@ -193,6 +221,7 @@ final class DefaultFaceletContext extends AbstractFaceletContext
     {
         // Assert.param("varMapper", varMapper);
         _varMapper = varMapper;
+        _varMapperBase = (_varMapper instanceof VariableMapperBase) ? (VariableMapperBase) varMapper : null;
     }
 
     /**
@@ -259,15 +288,14 @@ final class DefaultFaceletContext extends AbstractFaceletContext
     @Override
     public String generateUniqueId(String base)
     {
-
         if (_prefix == null)
         {
-            StringBuilder builder = new StringBuilder(
+            _uniqueIdBuilder = new StringBuilder(
                     _faceletHierarchy.size() * 30);
             for (int i = 0; i < _faceletHierarchy.size(); i++)
             {
                 AbstractFacelet facelet = _faceletHierarchy.get(i);
-                builder.append(facelet.getAlias());
+                _uniqueIdBuilder.append(facelet.getFaceletId());
             }
 
             // Integer prefixInt = new Integer(builder.toString().hashCode());
@@ -276,43 +304,45 @@ final class DefaultFaceletContext extends AbstractFaceletContext
             // with htmlunit 2.4 or lower, so in order to prevent it it is better to use
             // only positive values instead.
             // Take into account CompilationManager.nextTagId() uses Math.abs too.
-            Integer prefixInt = new Integer(Math.abs(builder.toString().hashCode()));
-
-            Integer cnt = _prefixes.get(prefixInt);
-            if (cnt == null)
-            {
-                _prefixes.put(prefixInt, Integer.valueOf(0));
-                _prefix = prefixInt.toString();
-            }
-            else
-            {
-                int i = cnt.intValue() + 1;
-                _prefixes.put(prefixInt, Integer.valueOf(i));
-                _prefix = prefixInt + "_" + i;
-            }
+            Integer prefixInt = new Integer(Math.abs(_uniqueIdBuilder.toString().hashCode()));
+            _prefix = prefixInt.toString();
         }
 
-        Integer cnt = _ids.get(base);
-        if (cnt == null)
+        _uniqueIdBuilder.setLength(0);
+        // getFaceletCompositionContext().generateUniqueId() is the one who ensures
+        // the final id will be unique, but prefix and base ensure it will be unique
+        // per facelet because prefix is calculated from faceletHierarchy and base is
+        // related to the tagId, which depends on the location.
+        //_uniqueIdBuilder.append(getFaceletCompositionContext().generateUniqueId());
+        
+        String uniqueIdFromIterator = getFaceletCompositionContext().getUniqueIdFromIterator();
+        if (uniqueIdFromIterator == null)
         {
-            _ids.put(base, Integer.valueOf(0));
-            _uniqueIdBuilder.delete(0, _uniqueIdBuilder.length());
-            _uniqueIdBuilder.append(_prefix);
-            _uniqueIdBuilder.append("_");
-            _uniqueIdBuilder.append(base);
-            return _uniqueIdBuilder.toString();
+            getFaceletCompositionContext().generateUniqueId(_uniqueIdBuilder);
+            // Since two different facelets are used to build the metadata, it is necessary
+            // to trim the "base" part from the returned unique id, to ensure the components will be
+            // refreshed properly. Note the "base" part is the one that allows to ensure
+            // uniqueness between two different facelets with the same <f:metadata>, but since by 
+            // spec view metadata sections cannot live on template client facelets, this case is
+            // just not possible. 
+            // MYFACES-3709 It was also noticed that in some cases, the prefix should also
+            // be excluded from the id. The prefix is included if the metadata section is
+            // applied inside an included section (by ui:define and ui:insert for example).
+            if (!getFaceletCompositionContext().isInMetadataSection())
+            {
+                _uniqueIdBuilder.append("_");
+                _uniqueIdBuilder.append(_prefix);
+                _uniqueIdBuilder.append("_");
+                _uniqueIdBuilder.append(base);
+            }
+            uniqueIdFromIterator = _uniqueIdBuilder.toString();
+            getFaceletCompositionContext().addUniqueId(uniqueIdFromIterator);
+            return uniqueIdFromIterator;
         }
         else
         {
-            int i = cnt.intValue() + 1;
-            _ids.put(base, Integer.valueOf(i));
-            _uniqueIdBuilder.delete(0, _uniqueIdBuilder.length());
-            _uniqueIdBuilder.append(_prefix);
-            _uniqueIdBuilder.append("_");
-            _uniqueIdBuilder.append(base);
-            _uniqueIdBuilder.append("_");
-            _uniqueIdBuilder.append(i);
-            return _uniqueIdBuilder.toString();
+            getFaceletCompositionContext().incrementUniqueId();
+            return uniqueIdFromIterator;
         }
     }
 
@@ -391,7 +421,7 @@ final class DefaultFaceletContext extends AbstractFaceletContext
         //}
         //throw new IllegalStateException(client + " not found");
         //return _clients.removeFirst();
-        return _isolatedTemplateContext.get(_currentTemplateContext).popClient();
+        return _isolatedTemplateContext.get(_currentTemplateContext).popClient(this);
     }
 
     @Override
@@ -399,13 +429,13 @@ final class DefaultFaceletContext extends AbstractFaceletContext
     {
         //this._clients.add(0, new TemplateManager(this._facelet, client, true));
         //_clients.addFirst(new TemplateManagerImpl(this._facelet, client, true));
-        _isolatedTemplateContext.get(_currentTemplateContext).pushClient(this._facelet, client);
+        _isolatedTemplateContext.get(_currentTemplateContext).pushClient(this, this._facelet, client);
     }
 
     public TemplateManager popExtendedClient(TemplateClient client)
     {
         //return _clients.removeLast();
-        return _isolatedTemplateContext.get(_currentTemplateContext).popExtendedClient();
+        return _isolatedTemplateContext.get(_currentTemplateContext).popExtendedClient(this);
     }
     
     @Override
@@ -413,7 +443,7 @@ final class DefaultFaceletContext extends AbstractFaceletContext
     {
         //this._clients.add(new TemplateManager(this._facelet, client, false));
         //_clients.addLast(new TemplateManagerImpl(this._facelet, client, false));
-        _isolatedTemplateContext.get(_currentTemplateContext).extendClient(this._facelet, client);
+        _isolatedTemplateContext.get(_currentTemplateContext).extendClient(this, this._facelet, client);
     }
 
     @Override
@@ -430,7 +460,8 @@ final class DefaultFaceletContext extends AbstractFaceletContext
         //    found = client.apply(this, parent, name);
         //}
         //return found;
-        return _isolatedTemplateContext.get(_currentTemplateContext).includeDefinition(this, this._facelet, parent, name);
+        return _isolatedTemplateContext.get(_currentTemplateContext).includeDefinition(
+                this, this._facelet, parent, name);
     }
 
     /*
@@ -528,7 +559,8 @@ final class DefaultFaceletContext extends AbstractFaceletContext
             _isolatedTemplateContext.add(new IsolatedTemplateContextImpl());
         }
         _currentTemplateContext++;
-        _isolatedTemplateContext.get(_currentTemplateContext).setCompositeComponentClient( new CompositeComponentTemplateManager(this._facelet, client));
+        _isolatedTemplateContext.get(_currentTemplateContext).setCompositeComponentClient(
+            new CompositeComponentTemplateManager(this._facelet, client));
     }
     
     @Override
@@ -552,9 +584,11 @@ final class DefaultFaceletContext extends AbstractFaceletContext
     public void pushCompositeComponentClient(final TemplateClient client)
     {
         TemplateContext itc = new TemplateContextImpl();
-        itc.setCompositeComponentClient(new CompositeComponentTemplateManager(this._facelet, client));
+        itc.setCompositeComponentClient(
+                new CompositeComponentTemplateManager(this._facelet, client, getPageContext()));
         _isolatedTemplateContext.add(itc);
         _currentTemplateContext++;
+        _defaultVarMapper.setTemplateContext(itc);
     }
     
     @Override
@@ -564,6 +598,7 @@ final class DefaultFaceletContext extends AbstractFaceletContext
         {
             _isolatedTemplateContext.remove(_currentTemplateContext);
             _currentTemplateContext--;
+            _defaultVarMapper.setTemplateContext(_isolatedTemplateContext.get(_currentTemplateContext));
         }
     }
     
@@ -572,6 +607,7 @@ final class DefaultFaceletContext extends AbstractFaceletContext
     {
         _isolatedTemplateContext.add(client);
         _currentTemplateContext++;
+        _defaultVarMapper.setTemplateContext(client);
     }    
 
     
@@ -583,9 +619,16 @@ final class DefaultFaceletContext extends AbstractFaceletContext
             TemplateContext itc = _isolatedTemplateContext.get(_currentTemplateContext);
             _isolatedTemplateContext.remove(_currentTemplateContext);
             _currentTemplateContext--;
+            _defaultVarMapper.setTemplateContext(_isolatedTemplateContext.get(_currentTemplateContext));
             return itc;
         }
         return null;
+    }
+    
+    @Override
+    public TemplateContext getTemplateContext()
+    {
+        return _isolatedTemplateContext.get(_currentTemplateContext);
     }
 
     @Override
@@ -619,11 +662,14 @@ final class DefaultFaceletContext extends AbstractFaceletContext
         protected final TemplateClient _target;
 
         private final Set<String> _names = new HashSet<String>();
+        
+        private final PageContext _pageContext;
 
-        public CompositeComponentTemplateManager(AbstractFacelet owner, TemplateClient target)
+        public CompositeComponentTemplateManager(AbstractFacelet owner, TemplateClient target, PageContext pageContext)
         {
             this._owner = owner;
             this._target = target;
+            this._pageContext = pageContext;
         }
 
         public boolean apply(FaceletContext ctx, UIComponent parent, String name)
@@ -639,10 +685,21 @@ final class DefaultFaceletContext extends AbstractFaceletContext
             {
                 this._names.add(testName);
                 boolean found = false;
-                found = this._target
-                        .apply(new DefaultFaceletContext(
-                                (DefaultFaceletContext) ctx, this._owner, false),
-                                parent, name);
+                AbstractFaceletContext actx = new DefaultFaceletContext(
+                        (DefaultFaceletContext) ctx, this._owner, false);
+                ctx.getFacesContext().getAttributes().put(FaceletContext.FACELET_CONTEXT_KEY, actx);
+                try
+                {
+                    actx.pushPageContext(this._pageContext);
+                    found = this._target
+                            .apply(actx,
+                                    parent, name);
+                }
+                finally
+                {
+                    actx.popPageContext();
+                }
+                ctx.getFacesContext().getAttributes().put(FaceletContext.FACELET_CONTEXT_KEY, ctx);
                 this._names.remove(testName);
                 return found;
             }
@@ -655,6 +712,47 @@ final class DefaultFaceletContext extends AbstractFaceletContext
             return this._owner == o || this._target == o;
         }
 
+        @Override
+        public int hashCode()
+        {
+            int result = _owner != null ? _owner.hashCode() : 0;
+            result = 31 * result + (_target != null ? _target.hashCode() : 0);
+            return result;
+        }
+    }
+    
+    @Override
+    public void pushPageContext(PageContext client)
+    {
+        _isolatedPageContext.add(client);
+        _defaultVarMapper.setPageContext(client);
+    }    
+
+    @Override
+    public PageContext popPageContext()
+    {
+        if (!_isolatedPageContext.isEmpty())
+        {
+            int currentPageContext = _isolatedPageContext.size()-1;
+            PageContext itc = _isolatedPageContext.get(currentPageContext);
+            _isolatedPageContext.remove(currentPageContext);
+            if (!_isolatedPageContext.isEmpty())
+            {
+                _defaultVarMapper.setPageContext(getPageContext());
+            }
+            else
+            {
+                _defaultVarMapper.setPageContext(null);
+            }
+            return itc;
+        }
+        return null;
+    }
+    
+    @Override
+    public PageContext getPageContext()
+    {
+        return _isolatedPageContext.get(_isolatedPageContext.size()-1);
     }
     
     //End methods from AbstractFaceletContext
@@ -725,4 +823,44 @@ final class DefaultFaceletContext extends AbstractFaceletContext
     {
         return _mctx;
     }
+    
+    public boolean isAnyFaceletsVariableResolved()
+    {
+        //if (isAllowCacheELExpressions() && _varMapperBase != null)
+        if (_varMapperBase != null)
+        {
+            return _varMapperBase.isAnyFaceletsVariableResolved();
+        }
+        return true;
+    }
+    
+    public boolean isAllowCacheELExpressions()
+    {
+        return _isCacheELExpressions && getTemplateContext().isAllowCacheELExpressions() 
+                && getPageContext().isAllowCacheELExpressions();
+    }
+    
+    public void beforeConstructELExpression()
+    {
+        //if (isAllowCacheELExpressions() && _varMapperBase != null)
+        if (_varMapperBase != null)
+        {
+            _varMapperBase.beforeConstructELExpression();
+        }
+    }
+    
+    public void afterConstructELExpression()
+    {
+        //if (isAllowCacheELExpressions() && _varMapperBase != null)
+        if (_varMapperBase != null)
+        {
+            _varMapperBase.afterConstructELExpression();
+        }
+    }
+    
+    public ELExpressionCacheMode getELExpressionCacheMode()
+    {
+        return _elExpressionCacheMode;
+    }
+    
 }
